[metadata]
name = tradier-python
version = 0.1.4.dev0
license = MIT License
description = fork of tradier Api package for python from Philip Eaton
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/Etienne-larchet/tradier-python
author = Etienne LARCHET
classifiers=
    License :: OSI Approved :: MIT License
    Programming Language :: Python :: 3
    Development Status :: 2 - Pre-Alpha

[options]
packages = find:
package_dir =
    =src
include_package_data = True
install_requires =
    requests
    pydantic

[options.packages.find]
where=src

;[options.entry_points]
;console_scripts =
;    my_sript = my_sript.__main__:main
